@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-02T08:08:06Z",
-  "count_outdated" : 76,
-  "uniques_outdated" : 38,
+  "timestamp" : "2022-12-05T00:31:14Z",
+  "count_outdated" : 77,
+  "uniques_outdated" : 39,
   "count" : 79,
   "uniques" : 41,
   "views" : [
-    {
-      "timestamp": "2022-11-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-23T00:00:00Z",
       "count": 1,
