@@ -1,3 +1,11 @@
+2022-12-05T00:31:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3615820731 # 674
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 38 76 / 41 79
+* notice: next accum: outdated-unq outdated-all / unq all: 39 77 / 41 79
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-20] / []
+
 2022-12-02T08:08:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3599967644 # 666
 * notice: last 14d: unq all: 3 3
